--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.1",
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7"
   }
 }
