--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@mui/icons-material": "^6.1.4",
+    "@reduxjs/toolkit": "^2.3.0",
     "firebase": "^11.0.1",
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-slideshow-image": "^4.3.2"
   },
