--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 MONGO_DB=mongodb+srv://anilgyawali:anilgyawali@cluster0.yxckb.mongodb.net/?retryWrites=true&w=majority&appName=ecommerce
-// beauty commerce
+
+
+
+
+
+
+JWT_SECRET=famskfasfmasfmfmawodgmamvasfag
